[project]
name = "audiotools"
version = "0.1.0"
description = ""
authors = [
    {name = "rakeeb-hossain",email = "rakeeb.hossain1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "so-vits-svc-fork (>=4.2.26,<5.0.0)",
    "click (>=8.2.0,<9.0.0)",
    "numpy (<2)",
    "soundfile (>=0.13.1,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "torch (<2.6)",
    "tqdm (>=4.67.1,<5.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "demucs (>=4.0.1,<5.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "gradio (==3.27.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
	"onnxruntime-gpu (>=1.22.0) ; sys_platform == 'win32' or sys_platform == 'linux'",
	"onnxruntime (>=1.22.0,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
audiotools = "audiotools.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
